--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -19,19 +19,19 @@ text:
     If a "Battlin' Boxer" monster(s) you control would be destroyed by battle or card effect, you can detach 1 material from this card instead of destroying 1 of those monsters. If a material(s) is detached from this card: This card gains 800 ATK.
   de: |-
     2 „Unermüdlicher Boxer“-Monster der Stufe 4
-    Falls ein oder mehr „Unermüdlicher Boxer“-Monster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du 1 Xyz-Material von dieser Karte abhängen, statt 1 der Monster zu zerstören. Falls ein oder mehr Xyz-Material von dieser Karte abgehängt werden: Diese Karte erhält 800 ATK.
+    Falls ein oder mehr „Unermüdlicher Boxer“-Monster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du 1 Material von dieser Karte abhängen, statt 1 jener Monster zu zerstören. Falls ein oder mehr Material von dieser Karte abgehängt werden: Diese Karte erhält 800 ATK.
   es: |-
     2 monstruos "Boxeador Indómito" de Nivel 4
-    Si uno o más monstruos "Boxeador Indómito" que controlas fueran a ser destruidos en battala o por efecto de una carta, puedes desacoplar de esta carta 1 Material Xyz para, en su lugar, destruir 1 de esos monstruos. Cuando uno o más Materiales Xyz son desacoplados de esta carta: esta carta gana 800 ATK.
+    Si uno o más monstruos "Boxeador Indómito" que controlas fueran a ser destruidos en batalla o por el efecto de una carta, puedes desacoplar 1 material de esta carta en lugar de destruir 1 de esos monstruos. Si uno o más materiales son desacoplados de esta carta: esta carta gana 800 ATK.
   fr: |-
     2 monstres "Boxeur Indomptable" de Niveau 4
-    Si un ou plusieurs monstres "Boxeur Indomptable" que vous contrôlez vont être détruits au combat ou par un effet de carte, vous pouvez détacher 1 Matériel Xyz de cette carte au lieu de détruire 1 de ces monstres. Lorsqu'un ou plusieurs Matériels Xyz sont détachés de cette carte : cette carte gagne 800 ATK.
+    Si un ou plusieurs monstres "Boxeur Indomptable" que vous contrôlez vont être détruits au combat ou par un effet de carte, vous pouvez détacher 1 Matériel de cette carte au lieu de détruire 1 de ces monstres. Si un ou plusieurs Matériels sont détachés de cette carte : cette carte gagne 800 ATK.
   it: |-
     2 mostri "Pugile Indomito" di Livello 4
-    Se uno o più mostri "Pugile Indomito" che controlli stanno per essere distrutti in battaglia o dall'effetto di una carta, puoi staccare 1 Materiale Xyz da questa carta invece di distruggere 1 di quel mostri. Quando uno o più Materiali Xyz vengono staccati da questa carta: questa carta guadagna 800 ATK.
+    Se uno o più mostri "Pugile Indomito" che controlli stanno per essere distrutti in battaglia o dall'effetto di una carta, puoi staccare 1 materiale da questa carta invece di distruggere 1 di quei mostri. Se uno o più materiali vengono staccati da questa carta: questa carta guadagna 800 ATK.
   pt: |-
     2 monstros "Boxeador Obstinado" de Nível 4
-    Se um ou mais monstros "Boxeador Obstinado" que você controla seriam destruídos em batalha ou por um efeito de card, você pode desassociar 1 Matéria Xyz deste card em vez de destruir 1 desses monstros. Quando uma ou mais Matérias Xyz forem desassociados deste card: este card ganha 800 de ATK.
+    Se um ou mais monstros "Boxeador Obstinado" que você controla seriam destruídos em batalha ou por um efeito de card, você pode desassociar 1 matéria deste card em vez de destruir 1 desses monstros. Se uma ou mais matérias forem desassociadas deste card: este card ganha 800 de ATK.
   ja: |-
     レベル４「ＢＫ」モンスター×２
     ①：自分フィールドの「ＢＫ」モンスターが戦闘・効果で破壊される場合、その「ＢＫ」モンスターの内の１体の代わりにこのカードのＸ素材を１つ取り除く事ができる。②：このカードのＸ素材が取り除かれた場合に発動する。このカードの攻撃力は８００アップする。
