--- a/data/cards/35537251.yaml
+++ b/data/cards/35537251.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     During your Main Phase: You can detach 1 material from a "Battlin' Boxer" Xyz Monster you control, and if you do, Special Summon this card from your hand. You can only use this effect of "Battlin' Boxer Shadow" once per turn.
   de: |-
-    Während deiner Main Phase: Du kannst 1 Xyz-Material von einem „Unermüdlicher Boxer“-Xyz-Monster abhängen, das du kontrollierst, und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. Du kannst diesen Effekt von „Unermüdlicher Boxer Schatten“ nur einmal pro Spielzug verwenden.
+    Während deiner Main Phase: Du kannst 1 Material von einem „Unermüdlicher Boxer“-Xyz-Monster abhängen, das du kontrollierst, und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. Du kannst diesen Effekt von „Unermüdlicher Boxer Schatten“ nur einmal pro Spielzug verwenden.
   es: |-
-    Durante tu Main Phase: puedes desacoplar 1 Material Xyz de un Monstruo Xyz "Boxeador Indómito" que controles y, si lo haces, Invoca esta carta de Modo Especial desde tu mano. Sólo puedes usar este efecto de "Boxeador Indómito Sombra" una vez por turno.
+    Durante tu Main Phase: puedes desacoplar 1 material de un Monstruo Xyz "Boxeador Indómito" que controles y, si lo haces, Invoca esta carta de Modo Especial desde tu mano. Sólo puedes usar este efecto de "Boxeador Indómito Sombra" una vez por turno.
   fr: |-
-    Durant votre Main Phase : vous pouvez détacher 1 Matériel Xyz d'un Monstre Xyz "Boxeur Indomptable" que vous contrôlez, et si vous le faites, Invoquez Spécialement cette carte depuis votre main. Vous ne pouvez utiliser cet effet de "Boxeur Indomptable de l'Ombre" qu'une fois par tour.
+    Durant votre Main Phase : vous pouvez détacher 1 Matériel d'un Monstre Xyz "Boxeur Indomptable" que vous contrôlez, et si vous le faites, Invoquez Spécialement cette carte depuis votre main. Vous ne pouvez utiliser cet effet de "Boxeur Indomptable de l'Ombre" qu'une fois par tour.
   it: |-
-    Durante la tua Main Phase: puoi staccare 1 Materiale Xyz da un Mostro Xyz "Pugile Indomito" che controlli e, se lo fai, Evoca Specialmente questa carta dalla tua mano. Puoi utilizzare questo effetto di "Pugile Indomito Ombra" una sola volta per turno.
+    Durante la tua Main Phase: puoi staccare 1 materiale da un Mostro Xyz "Pugile Indomito" che controlli e, se lo fai, Evoca Specialmente questa carta dalla tua mano. Puoi utilizzare questo effetto di "Pugile Indomito Ombra" una sola volta per turno.
   pt: |-
-    Durante sua Fase Principal: você pode desassociar 1 Matéria Xyz de um Monstro Xyz "Boxeador Obstinado" que você controla e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão. Você só pode usar este efeito de "Boxeador Obstinado Sombrio" uma vez por turno.
+    Durante sua Fase Principal: você pode desassociar 1 matéria de um Monstro Xyz "Boxeador Obstinado" que você controla e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão. Você só pode usar este efeito de "Boxeador Obstinado Sombrio" uma vez por turno.
   ja: |-
     自分のメインフェイズ時に発動できる。自分フィールド上の 「ＢＫ」と名のついたエクシーズモンスターのエクシーズ素材を１つ取り除き、 このカードを手札から特殊召喚する。「ＢＫ シャドー」の効果は１ターンに１度しか使用できない。
   ko: |-
