--- a/data/cards/42175079.yaml
+++ b/data/cards/42175079.yaml
@@ -20,13 +20,17 @@ text:
   de: |-
     Während deiner End Phase, falls du „Jurassische Welt“ kontrollierst: Zerstöre alle Karten auf dem Spielfeld.
   es: |-
+    (Esta carta no se trata como una carta "Volcánico/a").
     Durante tu End Phase, si controlas "Mundo Jurásico": destruye todas las cartas en el Campo.
   fr: |-
+    (Cette carte n'est pas traitée comme une carte "Volcanique".)
     Durant votre End Phase, si vous contrôlez "Monde Jurassique" : détruisez toutes les cartes sur le Terrain.
   it: |-
+    (Questa carta non viene considerata come una carta "Vulcanico".)
     Durante la tua End Phase, se controlli "Mondo Giurassico": distruggi tutte le carte sul Terreno.
   pt: |-
-    Durante sua Fase Final, se você controlar "Mundo Jurássico": destrua todas os cards no campo.
+    (Este card não é considerado como um card "Vulcânico(a)".)
+    Durante sua Fase Final, se você controlar "Mundo Jurássico": destrua todos os cards no campo.
   ja: |-
     自分フィールド上に「ジュラシックワールド」が存在している場合、自分のエンドフェイズ時に発動する事ができる。フィールド上のカードを全て破壊する。
   ko: |-
