--- a/data/cards/61679541.yaml
+++ b/data/cards/61679541.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     At the start of the Damage Step, if this card attacks a Defense Position monster: Destroy that monster.
   de: |-
-    Am Beginn des Damage Steps, falls diese Karte ein Monster in Verteidigungsposition angreift: Zerstöre das Monster.
+    Am Beginn des Damage Steps, falls diese Karte ein Monster in Verteidigungsposition angreift: Zerstöre jenes Monster.
   es: |-
     Al comienzo del Damage Step, si esta carta ataca a un monstruo en Posición de Defensa: destruye ese monstruo.
   fr: |-
