--- a/data/cards/86325573.yaml
+++ b/data/cards/86325573.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     The first time this card would be destroyed by battle each turn, it is not destroyed. Once per turn: You can target 1 of your "Battlin' Boxer" monsters that is banished or in your GY, that has a Level; all "Battlin' Boxer" monsters you currently control become that monster's current Level.
   de: |-
-    Einmal pro Spielzug kann diese Karte nicht durch Kampf zerstört werden. Einmal pro Spielzug: Du kannst 1 „Unermüdlicher Boxer“-Monster in deinem Friedhof oder 1 deiner verbannten „Unermüdlicher Boxer“-Monster wählen, das eine Stufe hat; die Stufe aller „Unermüdlicher Boxer“-Monster, die du derzeit kontrollierst, wird die gleiche wie die derzeitige Stufe des Monsters.
+    Das erste Mal in jedem Spielzug, dass diese Karte durch Kampf zerstört würde, wird sie nicht zerstört. Einmal pro Spielzug: Du kannst 1 deiner „Unermüdlicher Boxer“-Monster mit einer Stufe wählen, das verbannt ist oder sich in deinem Friedhof befindet; die Stufe aller „Unermüdlicher Boxer“-Monster, die du derzeit kontrollierst, wird die gleiche wie die derzeitige Stufe jenes Monsters.
   es: |-
-    Una vez por turno, esta carta no puede ser destruida en batalla. Una vez por turno: puedes seleccionar 1 monstruo "Boxeador Indómito" en tu Cementerio, o 1 de tus monstruos "Boxeador Indómito" desterrados, que tengan un Nivel; el Nivel de todos los monstruos "Boxeador Indómito" que controles en este momento se convierte en el Nivel en este momento de ese monstruo.
+    La primera vez que esta carta fuera a ser destruida en batalla cada turno, no es destruida. Una vez por turno: puedes seleccionar 1 de tus monstruos "Boxeador Indómito" que tenga un Nivel que esté desterrado o en tu Cementerio; el Nivel de todos los monstruos "Boxeador Indómito" que controles en este momento se convierte en el Nivel de ese monstruo en este momento.
   fr: |-
-    Une fois par tour, cette carte ne peut pas être détruite au combat. Une fois par tour : vous pouvez cibler 1 monstre "Boxeur Indomptable" dans votre Cimetière ou 1 de vos monstres "Boxeur Indomptable" bannis, qui a un Niveau ; tous les monstres "Boxeur Indomptable" que vous contrôlez actuellement deviennent du Niveau actuel du monstre.
+    La première fois que cette carte va être détruite au combat chaque tour, elle n'est pas détruite. Une fois par tour : vous pouvez cibler 1 de vos monstres "Boxeur Indomptable" qui est banni ou dans votre Cimetière, qui a un Niveau ; tous les monstres "Boxeur Indomptable" que vous contrôlez actuellement deviennent du Niveau actuel du monstre.
   it: |-
-    Una volta per turno, questa carta non può essere distrutta in battaglia. Una volta per turno: puoi scegliere come bersaglio 1 mostro "Pugile Indomito" nel tuo Cimitero, o 1 dei tuoi mostri "Pugile Indomito" banditi, che ha un Livello; tutti i mostri "Pugile Indomito" che controlli attualmente diventano del Livello attuale di quel mostro.
+    La prima volta che questa carta sta per essere distrutta in battaglia ogni turno, essa non viene distrutta. Una volta per turno: puoi scegliere come bersaglio 1 dei tuoi mostri "Pugile Indomito" che è bandito o nel tuo Cimitero, che ha un Livello; tutti i mostri "Pugile Indomito" che controlli attualmente diventano del Livello attuale di quel mostro.
   pt: |-
-    Uma vez por turno, este card não pode ser destruído em batalha. Uma vez por turno: você pode escolher 1 monstro "Boxeador Obstinado" no seu Cemitério ou 1 dos seus monstros "Boxeador Obstinado" banidos que tenha um Nível; todos os monstros "Boxeador Obstinado" que você controla atualmente se tornam do Nível atual desse monstro.
+    Na primeira vez que este card seria destruído em batalha a cada turno, ele não é destruído. Uma vez por turno: você pode escolher 1 dos seus monstros "Boxeador Obstinado" que estiverem banidos ou no seu Cemitério, que tenha um Nível; todos os monstros "Boxeador Obstinado" que você controla atualmente se tornam do Nível atual desse monstro.
   ja: |-
     このカードは１ターンに１度だけ戦闘では破壊されない。また、１ターンに１度、自分の墓地の「ＢＫ」と名のついたモンスター１体または除外されている自分の「ＢＫ」と名のついたモンスター１体を選択して発動できる。自分フィールド上の全ての「ＢＫ」と名のついたモンスターは選択したモンスターと同じレベルになる。
   ko: |-
