--- a/data/cards/08316565.yaml
+++ b/data/cards/08316565.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     During the Battle Phase, when a Spell/Trap Card, or monster effect, is activated while you control a "Battlin' Boxer" monster: Negate the activation, and if you do, destroy that card.
   de: |-
-    Während der Battle Phase, wenn eine Zauber-/Fallenkarte oder ein Monstereffekt aktiviert wird, solange du ein „Unermüdlicher Boxer“-Monster kontrollierst: Annulliere die Aktivierung und falls du dies tust, zerstöre die Karte.
+    Während der Battle Phase, wenn eine Zauber-/Fallenkarte oder ein Monstereffekt aktiviert wird, solange du ein „Unermüdlicher Boxer“-Monster kontrollierst: Annulliere die Aktivierung und falls du dies tust, zerstöre jene Karte.
   es: |-
-    Durante la Battle Phase, cuando es activada una Carta Mágica/de Trampa o un efecto de monstruo mientras controlas un monstruo "Boxeador Indómito": niega la activación y, si lo haces, destruye esa carta.
+    Durante la Battle Phase, cuando es activada una Carta Mágica/de Trampa o efecto de monstruo, mientras controles un monstruo "Boxeador Indómito": niega la activación y, si lo haces, destruye esa carta.
   fr: |-
     Durant la Battle Phase, lorsqu'une Carte Magie/Piège ou un effet de monstre est activé tant que vous contrôlez un monstre "Boxeur Indomptable" : annulez l'activation, et si vous le faites, détruisez la carte.
   it: |-
     Durante la Battle Phase, quando una Carta Magia/Trappola, o l'effetto di un mostro, viene attivata mentre controlli un mostro "Pugile Indomito": annulla l'attivazione e, se lo fai, distruggi quella carta.
   pt: |-
-    Durante a Fase de Batalha, quando um Card de Magia/Armadilha ou efeito de monstro for ativado enquanto você controlava um monstro "Boxeador Obstinado": negue a ativação e, se isso acontecer, destrua esse card.
+    Durante a Fase de Batalha, quando um Card de Magia/Armadilha ou efeito de monstro for ativado enquanto você controlar um monstro "Boxeador Obstinado": negue a ativação e, se isso acontecer, destrua esse card.
   ja: |-
     自分フィールド上に「ＢＫ」と名のついたモンスターが存在する場合に発動できる。バトルフェイズ中に発動した効果モンスターの効果・魔法・罠カードの発動を無効にして破壊する。
   ko: |-
