--- a/data/cards/14934922.yaml
+++ b/data/cards/14934922.yaml
@@ -20,29 +20,29 @@ text:
     ● Target 1 "Salamangreat" Link Monster you control that was Link Summoned using a monster with its same name as material; destroy cards your opponent controls, up to that monster's Link Rating.
     You can only activate 1 "Salamangreat Rage" per turn.
   de: |-
-    Aktiviere 1 dieser Effekte.
+    Aktiviere 1 dieser Effekte;
     ● Lege 1 „Grosalamander“-Monster von deiner Hand oder offen von deiner Spielfeldseite auf den Friedhof und wähle dann 1 Karte auf dem Spielfeld; zerstöre sie.
-    ● Wähle 1 „Grosalamander“-Linkmonster, das du kontrollierst und das mit einem Monster mit seinem Namen als Material als Linkbeschwörung beschworen wurde; zerstöre Karten, die dein Gegner kontrolliert, bis zur Linkzahl des Monsters.
+    ● Wähle 1 „Grosalamander“-Linkmonster, das du kontrollierst und das mit einem Monster mit demselben Namen als Material als Linkbeschwörung beschworen wurde; zerstöre Karten, die dein Gegner kontrolliert, bis zur Linkzahl jenes Monsters.
     Du kannst nur 1 „Grosalamander-Zorn“ pro Spielzug aktivieren.
   es: |-
-    Activa 1 de estos efectos.
+    Activa 1 de estos efectos;
     ● Manda al Cementerio 1 monstruo "Salamangrande" en tu mano o Campo boca arriba, y después selecciona 1 carta en el Campo; destrúyela.
-    ● Selecciona 1 Monstruo de Enlace "Salamangrande" que controles que fue Invocado por Enlace usando como material un monstruo con su mismo nombre; destruye una canidad de cartas que controle tu adversario, hasta la cantidad del Rating de Enlace de ese monstruo.
+    ● Selecciona 1 Monstruo de Enlace "Salamangrande" que controles que fue Invocado por Enlace usando como material un monstruo con su mismo nombre; destruye hasta tantas cartas que controle tu adversario como el Rating de Enlace de ese monstruo.
     Sólo puedes activar 1 "Rabia Salamangrande" por turno.
   fr: |-
-    Activez 1 de ces effets.
+    Activez 1 de ces effets ;
     ● Envoyez 1 monstre "Salamangrande" depuis votre main ou Terrain face recto au Cimetière, puis ciblez 1 carte sur le Terrain ; détruisez-la.
     ● Ciblez 1 Monstre Lien "Salamangrande" que vous contrôlez qui a été Invoqué par Lien en utilisant un monstre du même nom que celui-ci comme Matériel ; détruisez un nombre de cartes contrôlées par votre adversaire, inférieur ou égal à la Classification Lien du monstre.
     Vous ne pouvez activer qu'1 "Rage Salamangrande" par tour.
   it: |-
-    Attiva 1 di questi effetti.
+    Attiva 1 di questi effetti;
     ● Manda 1 mostro "Salamagna" dalla tua mano o Terreno scoperto al Cimitero, poi scegli come bersaglio 1 carta sul Terreno; distruggila.
     ● Scegli come bersaglio 1 Mostro Link "Salamagna" che controlli che è stato Evocato Link utilizzando un mostro con il suo stesso nome come materiale; distruggi carte controllate dal tuo avversario, fino alla Classificazione Link di quel mostro.
     Puoi attivare solo 1 "Rabbia Salamagna" per turno.
   pt: |-
-    Ative 1 desses efeitos.
+    Ative 1 desses efeitos;
     ● Envie 1 monstro "Salamagrande" da sua mão ou do campo com a face para cima para o Cemitério e, depois, escolha 1 card no campo; destrua-o.
-    ● Escolha 1 Monstro Link "Salamagrande" que você controla que foi Invocado por Invocação-Link usando um monstro com o mesmo nome como matéria; destrua cards que seu oponente controla, até o Valor Link desse monstro.
+    ● Escolha 1 Monstro Link "Salamagrande" que você controla que foi Invocado por Invocação-Link usando um monstro com seu mesmo nome como matéria; destrua cards que seu oponente controla, até o Valor Link desse monstro.
     Você só pode ativar 1 "Fúria Salamagrande" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。●手札及び自分フィールドの表側表示モンスターの中から、「サラマングレイト」モンスター１体を墓地へ送り、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。●自身と同名のモンスターを素材としてリンク召喚した自分フィールドの「サラマングレイト」リンクモンスター１体を対象として発動できる。そのモンスターのリンクマーカーの数まで、相手フィールドのカードを選んで破壊する。
