--- a/data/cards/21420702.yaml
+++ b/data/cards/21420702.yaml
@@ -17,17 +17,17 @@ text:
   en: |-
     Activate this card by sending 1 face-up "Blaze Accelerator" you control to the GY. During your Main Phase: You can target 1 monster your opponent controls; send 1 Pyro monster from your hand to the GY, and if you do, destroy that target, and if you do that, inflict 500 damage to your opponent. Your monsters cannot attack the turn you activate this effect.
   de: |-
-    Aktiviere diese Karte, indem du 1 offenen „Glutbeschleuniger“, den du kontrollierst, auf den Friedhof legst. Während deiner Main Phase: Du kannst 1 Monster wählen, das dein Gegner kontrolliert; lege 1 Pyro-Monster von deiner Hand auf den Friedhof und falls du dies tust, zerstöre das gewählte Ziel und falls du dies tust, füge deinem Gegner 500 Schaden zu. Deine Monster können in dem Spielzug, in dem du diesen Effekt aktivierst, nicht angreifen.
+    Aktiviere diese Karte, indem du 1 offenen „Glutbeschleuniger“, den du kontrollierst, auf den Friedhof legst. Während deiner Main Phase: Du kannst 1 Monster wählen, das dein Gegner kontrolliert; lege 1 Pyro-Monster von deiner Hand auf den Friedhof und falls du dies tust, zerstöre jenes gewählte Ziel und falls du dies tust, füge deinem Gegner 500 Schaden zu. Deine Monster können in dem Spielzug, in dem du diesen Effekt aktivierst, nicht angreifen.
   es: |-
     Activa esta carta mandando al Cementerio 1 "Acelerador de Llama" boca arriba que controles. Durante tu Main Phase: puedes seleccionar 1 monstruo que controle tu adversario; manda al Cementerio 1 monstruo Piro en tu mano y, si lo haces, destruye ese objetivo y, si haces eso, inflige 500 puntos de daño a tu adversario. Tus monstruos no pueden atacar en el turno en el que activas este efecto.
   fr: |-
     (Cette carte est toujours aussi traitée comme une carte "Accélérateur de Flammes".)
     Activez cette carte en envoyant 1 "Accélérateur de Flammes" face recto que vous contrôlez au Cimetière. Durant votre Main Phase : vous pouvez cibler 1 monstre contrôlé par votre adversaire ; envoyez 1 monstre Pyro depuis votre main au Cimetière, et si vous le faites, détruisez la cible, et si vous faites ça, infligez 500 points de dommages à votre adversaire. Vos monstres ne peuvent pas attaquer le tour où vous activez cet effet.
   it: |-
-    (Questa carta viene anche sempre considerata come una carta "Acceleratore Fiammata".)
+    (Questa carta viene sempre considerata come una carta "Acceleratore Fiammata".)
     Attiva questa carta mandando 1 "Acceleratore Fiammata" scoperto che controlli al Cimitero. Durante la tua Main Phase: puoi scegliere come bersaglio 1 mostro controllato dal tuo avversario; manda 1 mostro Pyro dalla tua mano al Cimitero e, se lo fai, distruggi quel bersaglio e, se fai quello, infliggi 500 danni al tuo avversario. I tuoi mostri non possono attaccare nel turno in cui attivi questo effetto.
   pt: |-
-    Ative este card ao enviar 1 "Acelerador de Explosão" com a face para cima que você controla para o Cemitério. Durante sua Fase Principal: você pode escolher 1 monstro que seu oponente controla; envie 1 monstro Piro da sua mão para o Cemitério e, se isso acontecer, destrua o alvo e, se isso acontecer, cause 500 de dano ao seu oponente. Seus monstros não podem atacar no turno em que você ativar este efeito.
+    Ative este card ao enviar 1 "Acelerador de Explosão" com a face para cima que você controla para o Cemitério. Durante sua Fase Principal: você pode escolher 1 monstro que seu oponente controla; envie 1 monstro Piro da sua mão para o Cemitério e, se isso acontecer, destrua o alvo e, se isso acontecer, cause 500 de dano ao seu oponente. Seus monstros não podem atacar no turno em que ativar este efeito.
   ja: |-
     このカードは自分フィールド上に表側表示で存在する「ブレイズ・キャノン」１枚を墓地へ送って発動できる。また、自分のメインフェイズ時、相手フィールド上のモンスター１体を選択して発動できる。手札から炎族モンスター１体を墓地へ送り、選択した相手モンスターを破壊し相手ライフに５００ポイントダメージを与える。この効果を発動するターン、自分のモンスターは攻撃できない。
   ko: |-
